Mon Sep 27 20:37:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScanner.m: Fix error introduced into skipToNextField() macro
	my my last rewrite - sorry.  Thanks to N. Pero for narrowing down the
	problem to a level where I could locate it.

1999-09-24  Adam Fedor  <fedor@gnu.org>

	* configure.in: Add check for Objective-C headers.

Thu Sep 23 20:09:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Invocation.m: VARARGS fix by ani joshi <ajoshi@wam.umd.edu>

Tue Sep 21 20:26:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/Foundation/NSPortNameServer.h: Tidied and removed a few ivars.
	* Source/NSPortNameServer.m: Rewritten to be a bit clearer and to
	permit parallel lookup on multiple hosts.

Sun Sep 19  6:07:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSString.m: Fix bug in ([+stringByStandardizingPath]) with trailing
	slash.

Thu Sep 16 19:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Change request from Helge
	* Source/externs.m: added NSNonRetainedObjectMapValueCallBacks
	* Headers/Foundation/NSMapTable.h: ditto.

Thu Sep 16  8:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Changes to minimise naming conflicts by making sure that all ivars
	of public classes are prefixed with a underscore.
	* Headers/Foundation/NSArchiver.h: prefix ivars with underscore and tidy
	* Headers/Foundation/NSArray.h: ditto
	* Headers/Foundation/NSAttributedString.h: ditto
	* Headers/Foundation/NSAutoreleasePool.h: ditto
	* Headers/Foundation/NSBitmapCharSet.h: ditto
	* Headers/Foundation/NSBundle.h: ditto
	* Headers/Foundation/NSCharacterSet.h: ditto
	* Headers/Foundation/NSCoder.h: ditto
	* Headers/Foundation/NSData.h: ditto
	* Headers/Foundation/NSDate.h: ditto
	* Headers/Foundation/NSDateFormatter.h: ditto
	* Headers/Foundation/NSDictionary.h: ditto
	* Headers/Foundation/NSDistantObject.h: ditto
	* Headers/Foundation/NSDistributedLock.h: ditto